# genshin-auto-daily-check-in-docker

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-alpine  LICENSE.md  README.md  Taskfile.yml  docker-bake.hcl  docker-compose-example.yaml  docker-compose.yml.example  main.py  prek.toml  pylock.toml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
