[tool.poetry]
name = "genshin-auto-daily-check-in-docker"
version = "1.5.0"
description = "원신 호요랩 자동 출석체크 도커 이미지. 여러 계정을 한번에 등록할 수 있습니다."
authors = ["Bingsu <ks2515@naver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
genshin = { url = "https://github.com/thesadru/genshin.py/archive/4f1b2ebc5cdea62f65f9348b8fc79d6d12099d18.zip" }
rich = "*"
schedule = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
python-dotenv = "*"
pre-commit = "*"
taskipy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "FURB",
    "I001",
    "ISC",
    "N",
    "PERF",
    "PIE",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "SIM",
    "T20",
    "UP",
    "W",
]
ignore = ["B905", "E501"]
unfixable = ["F401"]

[tool.taskipy.tasks.docker]
cmd = "docker build --platform linux/amd64,linux/arm64 --tag ks2515/genshin-auto-daily-check-in ."
help = "Build docker image. Requires containerd image store."
